--- a/react/package.json
+++ b/react/package.json
@@ -33,6 +33,8 @@
         "webpack-dev-server": "^4.2.1"
     },
     "dependencies": {
+        "express": "^4.17.1",
+        "https-browserify": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
