--- a/react/package.json
+++ b/react/package.json
@@ -22,11 +22,15 @@
         "@babel/preset-react": "^7.14.5",
         "@webpack-cli/generators": "^2.3.0",
         "babel-loader": "^8.2.2",
+        "buffer": "^6.0.3",
         "css-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
+        "https-browserify": "^1.0.0",
         "prettier": "^2.4.0",
+        "process": "^0.11.10",
         "sass": "^1.41.1",
         "sass-loader": "^12.1.0",
+        "stream-http": "^3.2.0",
         "style-loader": "^3.2.1",
         "webpack": "^5.52.1",
         "webpack-cli": "^4.8.0",
@@ -34,7 +38,6 @@
     },
     "dependencies": {
         "express": "^4.17.1",
-        "https-browserify": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
