--- a/react/package.json
+++ b/react/package.json
@@ -37,7 +37,8 @@
         "webpack-dev-server": "^4.2.1"
     },
     "dependencies": {
-        "express": "^4.17.1",
+        "axios": "^0.21.4",
+        "Buffer": "npm:buffer@^6.0.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
