--- a/react/package.json
+++ b/react/package.json
@@ -40,6 +40,7 @@
         "axios": "^0.21.4",
         "Buffer": "npm:buffer@^6.0.3",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-sanitize-dom-props": "^0.0.1"
     }
 }
