--- a/react/package.json
+++ b/react/package.json
@@ -39,6 +39,7 @@
     "dependencies": {
         "axios": "^0.21.4",
         "Buffer": "npm:buffer@^6.0.3",
+        "classnames": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-sanitize-dom-props": "^0.0.1"
