--- a/react/package.json
+++ b/react/package.json
@@ -20,11 +20,11 @@
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
         "@babel/preset-react": "^7.14.5",
-        "@webpack-cli/generators": "^2.3.0",
+        "@webpack-cli/generators": "^1.1.0",
         "babel-loader": "^8.2.2",
         "buffer": "^6.0.3",
         "css-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.3.2",
+        "html-webpack-plugin": "^1.1.0",
         "https-browserify": "^1.0.0",
         "prettier": "^2.4.0",
         "process": "^0.11.10",
@@ -34,14 +34,16 @@
         "style-loader": "^3.2.1",
         "webpack": "^5.52.1",
         "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "^4.2.1"
+        "webpack-dev-server": "^4.3.1"
     },
     "dependencies": {
         "axios": "^0.21.4",
         "Buffer": "npm:buffer@^6.0.3",
         "classnames": "^2.3.1",
         "react": "^17.0.2",
+        "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
-        "react-sanitize-dom-props": "^0.0.1"
+        "react-sanitize-dom-props": "^0.0.1",
+        "set-cookie-parser": "^2.4.8"
     }
 }
