--- a/react/package.json
+++ b/react/package.json
@@ -24,7 +24,7 @@
         "babel-loader": "^8.2.2",
         "buffer": "^6.0.3",
         "css-loader": "^6.2.0",
-        "html-webpack-plugin": "^1.1.0",
+        "html-webpack-plugin": "^5.3.2",
         "https-browserify": "^1.0.0",
         "prettier": "^2.4.0",
         "process": "^0.11.10",
@@ -32,7 +32,7 @@
         "sass-loader": "^12.1.0",
         "stream-http": "^3.2.0",
         "style-loader": "^3.2.1",
-        "webpack": "^5.52.1",
+        "webpack": "^5.58.0",
         "webpack-cli": "^4.8.0",
         "webpack-dev-server": "^4.3.1"
     },
@@ -43,6 +43,7 @@
         "react": "^17.0.2",
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
         "react-sanitize-dom-props": "^0.0.1",
         "set-cookie-parser": "^2.4.8"
     }
