--- a/react/package.json
+++ b/react/package.json
@@ -44,7 +44,6 @@
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
         "react-router": "^5.2.1",
-        "react-sanitize-dom-props": "^0.0.1",
-        "set-cookie-parser": "^2.4.8"
+        "react-sanitize-dom-props": "^0.0.1"
     }
 }
