--- a/react/package.json
+++ b/react/package.json
@@ -43,7 +43,7 @@
         "react": "^17.0.2",
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
-        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
         "react-sanitize-dom-props": "^0.0.1"
     }
 }
