--- a/react/package.json
+++ b/react/package.json
@@ -44,6 +44,7 @@
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
-        "react-sanitize-dom-props": "^0.0.1"
+        "react-sanitize-dom-props": "^0.0.1",
+        "react-select": "^5.1.0"
     }
 }
