--- a/react/package.json
+++ b/react/package.json
@@ -37,10 +37,12 @@
         "webpack-dev-server": "^4.3.1"
     },
     "dependencies": {
+        "ace-builds": "^1.4.13",
         "axios": "^0.21.4",
         "Buffer": "npm:buffer@^6.0.3",
         "classnames": "^2.3.1",
         "react": "^17.0.2",
+        "react-ace": "^9.4.4",
         "react-cookies": "^0.1.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
