--- a/react/package.json
+++ b/react/package.json
@@ -47,6 +47,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
         "react-sanitize-dom-props": "^0.0.1",
-        "react-select": "^5.1.0"
+        "react-select": "^5.1.0",
+        "react-table": "^7.7.0"
     }
 }
